ReadinessProbes.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      ports:
        - containerPort: 8080
      readinessProbe:
        httpGet: 
          path: /api/ready
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 5
        failureThreshold: 8
        
        tcpSocket:
          port: 3306
        
        exec:
          command:
            - cat 
            - /app/is_ready

# Kubernetes will wait for the result of readinessprobes
# before allowing traffic to a pod
