daemon-set.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: monitoring
spec:
  selector:
    matchLabels:
      app: monitoring-agent
  template:
    metadata:
      labels:
        app: monitoring-agent
    spec:
      containers:
        - name: monitoring-agent
          image: monitoring-agent

# Ensure a copy of a pod runs on each node in the cluster
# Usecase can be kubeproxy and netowrking or monitoring or logging
