pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
    tier: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
      command:
        - "sleep"
        - "5000"


# Entrypoint corresponds to command field
# CMD corresponds to args 
# both are provided as arrays
