staticpod.yml
apiVersion: v1
kind: Pod
metadata:
  
  labels:
    run: static-busybox
  name: static-busybox
spec:
  containers:
  - image: busybox
    name: static-busybox
    command: ["sleep", "1000"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}


## path need not be /etc/k8s/manifests
## first check the path in config.yaml
## config.yaml present at /var/lib/kubelet/



# kubelet can manage a nod independently
# kubelet can create pods
# kubelet can be configured to read pod-definition file 
# from a dierectory desgnaed to place the definition files
# kubelet periodically checks this dierectory 
# it can read from any dierectory from the server 
# given path to the dierectory must be provided in kubelet.service
# another option is to create kubeconfig.yml in and give path to this 
# in kubelet.service 
# and in kubeconfig staticcPodPath provided to the dierectory 
# this method is used by KUBEADM cluster



# kubelet also ensure the pod stays alive
# if definition file changes kubelet also edit the pods
# But kubelet on it's own only create pods and ca't create 
# deployments and other k8s objects
# kubelet can create both kind of pods 
# kubeApiserver is aware of static pods 
# whn kubelet create a static pod 
# a mirror object is alos created in kubeapi server 

# kubeadm setup controlplane components as static pods on master node
# both static pods and daemon sets are ignored by scheduler





# kubectl get pods --all-namespaces :))
